[tool.poetry]
name = "ultrasound2babyface"
version = "0.1.0"
description = "Generate realistic baby photos from 3D ultrasound images using ControlNet and Stable Diffusion(img2img)"
authors = ["Taehan Kim <taehan5479@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^5.16.0"
torch = "^2.6.0"
transformers = "^4.48.3"
diffusers = "^0.32.2"
accelerate = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
